--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,6 @@
 {
     ".ts": [
-        "eslint 'src/**' --fix",
-        "npm run test:staged"
+        "npx eslint 'src/**' --fix",
+        "npx test:staged"
     ]
 }
