--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,14 @@
 {
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
     "extends": "standard-with-typescript",
-    "parseOptions": {
+    "overrides": [
+    ],
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module",
         "project": "./tsconfig.json"
     },
     "rules": {
