--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,6 @@
 {
     ".ts": [
-        "npx eslint 'src/**/*.ts' --fix",
+        "npx eslint src/**/*.ts --fix",
         "npx test:staged"
     ]
 }
