--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "homepage": "https://github.com/bertdev/polls-api#readme",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.1.4",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.2.4",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^18.11.18",
     "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
@@ -43,6 +45,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "mongodb": "^4.13.0",
     "validator": "^13.7.0"
   }
 }
