--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@shelf/jest-mongodb": "^4.1.4",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.2.4",
-    "@types/mongodb": "^4.0.7",
+    "@types/mongodb": "^4.0.3",
     "@types/node": "^18.11.18",
     "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
@@ -45,7 +45,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "mongodb": "^4.13.0",
+    "mongodb": "4.0",
     "validator": "^13.7.0"
   }
 }
