--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
-    "test:integration": "npm test -- watch -c jest-integration-config.js",
+    "test:integration": "npm test -- --watch -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage"
   },
@@ -45,7 +45,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "mongodb": "4.0",
+    "mongodb": "^4.13.0",
     "validator": "^13.7.0"
   }
 }
