--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests",
-    "test:ci": "npm test -- --coverage"
+    "test:ci": "npm test -- --coverage",
+    "start": "sucrase-node src/main/server.ts"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.1.4",
     "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
     "@types/mongodb": "^4.0.3",
     "@types/node": "^18.11.18",
@@ -39,12 +41,14 @@
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "lint-staged": "^13.1.0",
+    "sucrase": "^3.29.0",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
     "mongodb": "^4.13.0",
     "validator": "^13.7.0"
   }
