--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
-    "start": "sucrase-node src/main/server.ts"
+    "dev": "sucrase-node src/main/server.ts",
+    "build":"tsc",
+    "start": "node dist/main/server.js"
   },
   "repository": {
     "type": "git",
@@ -52,7 +54,6 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
-    "fast-glob": "^3.2.12",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
     "validator": "^13.7.0"
